--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,7 +1,7 @@
 # the working dir
 workDir=./
 
-# localhost jmx ports, split by comma
+# jmx ports, in format of zkPath:jmxport, seperated by comma
 jmx.ports=10000,10001,10002,10003
 
 # agent port url
