--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,8 +1,10 @@
 # the working dir
 workDir=./
 
-# jmx ports, in format of zkPath:jmxport, seperated by comma
-jmx.ports=10000,10001,10002,10003
-
 # agent port url
 agent.posturl=http://localhost:1988/v1/push
+
+# value in zk in format of [zkpath1:jmxport1[:serviceTag],zkpath2:jmxport2[:serviceTag]]
+jmx.config.zookeeper.path=/com/xiaomi/config/miui/ads/jmx
+
+zkservers=zk1.staging.srv:2181\\,zk2.staging.srv:2181\\,zk3.staging.srv:2181\\,zk4.staging.srv:2181\\,zk5.staging.srv:2181
